--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Estabilizador</title>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="options">
+        <span id='d-mouse-pos' style='float: right;'>Mouse position: (,)</span>
+        <div class='form'>
+            <div class="form-group">
+                <label for="filter-size">
+                    Filter size
+                </label>
+                <input type="number" name="filter-size" id="filter-size" placeholder="= 10" min="0"/>
+            </div>
+            <div class="form-group">
+                <label for="brush-size">
+                    Brush size
+                </label>
+                <input type="number" name="brush-size" id="brush-size" placeholder="= 1" min="1">
+            </div>
+            <br>
+            <br>
+            <div class="form-group">
+                <label for="color">
+                    Color
+                </label>
+                <input type="color" name="color" id="color"> 
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <canvas id="canvas" width="800" height="600"></canvas>
+    </div>
     <script src="js/index.js"></script>
 </body>
 </html>
