--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/stroke-stabilizer/css/index.css">
     <title>Estabilizador</title>
 </head>
 <body>
@@ -35,6 +35,6 @@
     <div class="container">
         <canvas id="canvas" width="800" height="600"></canvas>
     </div>
-    <script src="js/index.js"></script>
+    <script src="/stroke-stabilizer/js/index.js"></script>
 </body>
 </html>
