--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="real-time stroke stabilizer using a moving average filter">
+    <meta name="keywords" content="stroke stabilizer, alphanumeric-username">
     <link rel="stylesheet" href="/stroke-stabilizer/css/index.css">
     <title>Stroke stabilizer</title>
 </head>
